# drf-viewsets

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml
nginx/: Dockerfile  default.conf
