[tool.poetry]
name = "drf-viewsets"
version = "0.1.0"
description = ""
authors = ["Filip <mularskif@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
django-environ = "^0.10.0"
gunicorn = "^20.1.0"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
pytest-django = "^4.5.2"
faker = "^18.9.0"
pytest-cov = "^4.1.0"
pytest-factoryboy = "^2.5.1"
drf-spectacular = "^0.26.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
